Fix sheet navigation overflow

--- a/frontend/src/tools/components/Excel/Excel.scss
+++ b/frontend/src/tools/components/Excel/Excel.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-flow: column nowrap;
 
-  width: 100%;
+  width: 100vw;
 }
 
 .divider {
